final before submission

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,3 @@
-
 <ion-view hide-nav-bar="true">
     <ion-content padding="true" scroll="false">
         <form>
@@ -6,24 +5,24 @@
                 <div class="col col-50 col-offset-25">
 
                     <div class="header padding text-center">
-                        <img src="img/logocet.png" style="background-size:cover;" alt="CET Connect"/>
+                        <img src="img/campusconnect.png" style="background-size:cover;" alt="CET Connect" />
                     </div>
 
                     <div class="list">
-                      <label class="item item-input item-floating-label">
+                        <label class="item item-input item-floating-label">
                         <span class="input-label">Username</span>
                         <input type="text" ng-model="payload.userId" placeholder="Username">
                       </label>
-                      <label class="item item-input item-floating-label">
+                        <label class="item item-input item-floating-label">
                         <span class="input-label">Password</span>
                         <input type="password" ng-model="payload.password" placeholder="Password">
                       </label>
-                  </div>
+                    </div>
                     <div style="display: flex; justify-content: center;">
-                    <button ng-click="login()" class="button button-flat button-positive">
+                        <button ng-click="login()" class="button button-flat button-positive">
                         Log In
                     </button>
-                    
+
                     </div>
 
                     <div class="row row-no-padding">
