--- a/www/templates/inbox.html
+++ b/www/templates/inbox.html
@@ -1,52 +1,91 @@
 <ion-view title="Inbox" hide-back-button="true">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon  button-clear icon ion-navicon"></button>
- </ion-nav-buttons> 
-  
-<style>
-            .myClass{
-                color:black !important;
-                background-color: #ec407a !important;
-            }
-        </style>
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon  button-clear icon ion-navicon"></button>
+    </ion-nav-buttons>
 
-<ion-floating-menu menu-color="#f50057" menu-open-color="#f50057">
-    <ion-floating-item button-color="#f50057" text="Compose" text-class="myClass" icon="ion-android-textsms" click="compose()"></ion-floating-item>
-    <ion-floating-item button-color="#f50057" text="Sent items" text-class="myClass" icon="ion-android-done" click="sentItems()"></ion-floating-item>
-</ion-floating-menu>
+    <style>
+        .myClass {
+            color: black !important;
+            background-color: #ec407a !important;
+        }
+    </style>
 
-<ion-content>
-    <div class="list card light-bg" ng-animate=" 'animate'" ng-repeat="message in messages">
-                <div class="item item-avatar" ng-class="{active: isMsgShown(message)}">
-                    <img src="img/ionic.png">
-                    <h2>{{message.senderName}}</h2>
-                    <p>"Joffrey. Cersei. Ilyn Payne. Hound. Polliver. The Mountain."</p>
-                </div>
-                 <div class="item tabs tabs-secondary tabs-icon-left" ng-click="reply()">
-                    <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
-                        <i class="icon ion-thumbsup"></i> Reply
-                    </a>
-                    <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
-                        <i class="icon ion-android-share"></i> Forward
-                    </a>
-                    <a ng-click="delete(message.id)" class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
-                        <i class="icon ion-android-delete"></i> Delete
-                    </a>
-                </div>
-                <div class="item item-body"  ng-click="toggleMessage(message)">
-                    <div>
-                        <div style="padding-left: 17px;">
-                            <h3>{{message.subject}}</h3>
-                        </div>
-                        <div ng-bind="message.message" ng-show="isMsgShown(message)" style="white-space: pre-wrap;"  class="item item-text-wrap item-accordion">
-                        </div>
-                </div>
-                </div>
-               
+    <ion-floating-menu menu-color="#f50057" menu-open-color="#f50057">
+        <ion-floating-item button-color="#f50057" text="Compose" text-class="myClass" icon="ion-android-textsms" click="compose()"></ion-floating-item>
+        <ion-floating-item button-color="#f50057" text="Sent items" text-class="myClass" icon="ion-android-done" click="sentItems()"></ion-floating-item>
+    </ion-floating-menu>
+
+    <ion-content>
+
+        <div ng-hide="message.read" class="list card stable-bg" ng-animate=" 'animate'" ng-repeat="message in messages">
+            <div class="item item-avatar" ng-class="{active: isMsgShown(message)}">
+                <img src="img/ionic.png">
+                <h2>{{message.senderName}}</h2>
+
+                <p>{{currentMessage.timeString}}</p>
             </div>
-          
+            <div class="item tabs tabs-secondary tabs-icon-left" ng-click="reply()">
+                <!--
+                <a ng-click="openModal()" class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
+                    <i class="icon ion-thumbsup"></i> Reply
+                </a>
+                <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
+                    <i class="icon ion-android-share"></i> Forward
+                </a> -->
+                <a ng-click="delete(message.id)" class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
+                    <i class="icon ion-android-delete"></i> Delete
+                </a>
+            </div>
+            <div class="item item-body" ng-click="toggleMessage(message)">
+                <div>
+                    <div style="padding-left: 17px;">
+                        <h3>{{message.subject}}</h3>
+                    </div>
+                    <div ng-bind="message.message" ng-show="isMsgShown(message)" style="white-space: pre-wrap;" class="item item-text-wrap item-accordion">
+                    </div>
+                </div>
+            </div>
 
-<!--
+        </div>
+
+
+
+
+        <div ng-hide="!message.read" class="list card light-bg" ng-animate=" 'animate'" ng-repeat="message in messages">
+            <div class="item item-avatar" ng-class="{active: isMsgShown(message)}">
+
+                <img src="img/ionic.png">
+                <i style="float:right;" ng-click="delete(message.id)" class="icon ion-android-delete">Delete</i>
+
+                <h2>{{message.senderName}}</h2>
+                <p>{{currentMessage.timeString}}</p>
+            </div>
+            <div class="item tabs tabs-secondary tabs-icon-left" ng-click="reply()">
+                <!--
+                <a ng-click="openModal()" class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
+                    <i class="icon ion-thumbsup"></i> Reply
+                </a>
+                <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
+                    <i class="icon ion-android-share"></i> Forward
+                </a> -->
+
+
+            </div>
+            <div class="item item-body" ng-click="toggleMessage(message)">
+                <div>
+                    <div style="padding-left: 17px;">
+                        <h3>{{message.subject}}</h3>
+                    </div>
+                    <div ng-bind="message.message" ng-show="isMsgShown(message)" style="white-space: pre-wrap;" class="item item-text-wrap item-accordion">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+
+        <!--
      <ion-list>
         <ion-item ng-repeat="message in messages" class="item-icon-left item-remove-animate">
           <div ng-click="showMessage(message)">
@@ -104,6 +143,5 @@
     
 
 -->
-
-</ion-content>
+    </ion-content>
 </ion-view>
